# GitDemo

./: README.md
android/app/src/MyApplication/: build.gradle
android/app/src/MyApplication/app/: CMakeLists.txt  build.gradle
android/app/src/MyApplication/app/sanitizer/resources/: wrap.sh
android/app/src/MyApplication/app/src/main/java/com/example/myapplication/: MainActivity.java
android/app/src/MyApplication/app/src/main/jni/: native_lib.cpp
android/app/src/MyApplication/gradle/wrapper/: gradle-wrapper.properties
